--- a/Server/package.json
+++ b/Server/package.json
@@ -10,12 +10,12 @@
   "author": "",
   "license": "ISC",
   "description": "",
-
   "dependencies": {
     "@types/crypto-js": "^4.2.2",
     "@types/nodemailer": "^7.0.4",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
     "ejs": "^3.1.10",
     "express": "^5.2.1",
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.6",
